# ViralSeq-QC

./: .gitattributes  .gitignore  README.md  ViralSeq_QC_Demo.ipynb  pyproject.toml  results.tsv
.github/workflows/: ci.yml
data/: sample_sequences.fasta
notebooks/: ViralSeq_QC_Tutorial.ipynb  ViralSeq_QC_Tutorial.py
src/: __init__.py  input_output.py  main.py  qc.py
tests/: conftest.py  test_input_output.py  test_qc.py
